# hlstrack2025_40562

./: .gitignore  40562报告.md  README.md  决赛细则  命题式基础赛道报告模板.md  报告模板_LZH.md  报告模板_WHP.md
data_compression/: .gitignore
data_compression/L1/include/hw/: lz4_compress.hpp  lz_compress.hpp  lz_optional.hpp
data_compression/L1/tests/lz4_compress/: hls_config.cfg  hls_config.tmpl  run_hls.tcl  sample.txt.encoded
data_compression/L1/tests/lz4_compress/prompts/: llm_usage.md
data_compression/L1/tests/lz4_compress/reports/: csynth.xml  lz4CompressEngineRun_cosim.rpt  summary_T_exec.txt
security/L1/include/xf_security/: hmac.hpp  sha224_256.hpp
security/L1/tests/hmac/sha256/: hls_config.cfg  hls_config.tmpl  run_hls.tcl
security/L1/tests/hmac/sha256/prompts/: llm_usage.md
security/L1/tests/hmac/sha256/reports/: csynth.xml  summary_T_exec.txt  test_hmac_sha256_cosim.rpt
solver/L1/include/hw/: cholesky.hpp  ukf.hpp
solver/L1/include/hw/utils/: x_matrix_utils.hpp
solver/L1/tests/cholesky/complex_fixed_arch0/: hls_config.cfg  hls_config.tmpl  run_hls.tcl  summary_T_exec.txt
solver/L1/tests/cholesky/complex_fixed_arch0/prompts/: llm_usage.md
solver/L1/tests/ukf/: run_hls.tcl  ukf_accel.cpp  ukf_tb.cpp  vivado_bd.tcl
solver/L1/tests/ukf/vivado_bd/: design_1.hwh  design_1.xsa  design_1_pynq.hwh  ukf_bd.xpr
solver/L1/tests/ukf/vivado_bd/ukf_bd.gen/sources_1/bd/design_1/ip/design_1_ukf0_0/drivers/ukf_accel_step_v1_0/src/: CMakeLists.txt  Makefile  xukf_accel_step.c  xukf_accel_step.h  xukf_accel_step_hw.h  xukf_accel_step_linux.c  xukf_accel_step_sinit.c
(+221 files in other folders)
